# FloatLyric

./: CMakeLists.txt  README.md  android_release.keystore  main.cpp  main.qml
